# llm-kelt

./: .coderabbit.yaml  .env.yaml.example  .gitignore  CHANGELOG.md  CODEOWNERS  LICENSE  Makefile  README.md  llm-kelt.py  llm-learn.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: README.md  cli.md  glossary.md  usage.md
docs/spec/: 01-goals.md  02-learning-methods.md  03-framework-strategy.md  04-architecture.md  05-data-model.md  06-context-routing.md  07-advanced-methods.md  README.md
etc/: infra.yaml  learn.yaml  llm-kelt.yaml  llm-learn.yaml  models.yaml  pg.yaml
examples/: 01_facts_and_context.py  02_rag_retrieval.py  03_training_export.py  04_lora_training.py  _helpers.py
llm_kelt/: __init__.py  client.py  factory.py  scoped_client.py
llm_kelt/cli/: __init__.py  __main__.py  cli.py
llm_kelt/cli/tools/: proxy.py  train.py
llm_kelt/core/: __init__.py  base.py  content.py  database.py  embedding.py  errors.py  exceptions.py  models.py  schema.py  scoped_database.py  types.py  utils.py
llm_kelt/core/export/: __init__.py  jsonl.py
llm_kelt/inference/: __init__.py  embedder.py
llm_kelt/memory/: isolation.py
llm_kelt/memory/atomic/: __init__.py  embedding.py  models.py  protocol.py
llm_kelt/memory/atomic/clients/: __init__.py  assertions.py  base.py  directives.py  feedback.py  interactions.py  predictions.py  preferences.py  solutions.py
llm_kelt/migrations/: alembic.ini  env.py
llm_kelt/serving/: __init__.py  app.py  routes.py
llm_kelt/training/: __init__.py  export.py  factory.py  merge.py  model.py  profiles.py  runner.py  schema.py  stability.py
llm_kelt/training/dpo/: __init__.py  client.py  export.py  trainer.py
llm_kelt/training/lora/: __init__.py  config.py  registry.py  trainer.py
llm_kelt/training/manifest/: __init__.py  client.py  errors.py  loader.py  schema.py
llm_kelt/training/prompt/: __init__.py  client.py  config.py  trainer.py
llm_kelt/training/sft/: __init__.py  client.py
llm_kelt/training/storage/: __init__.py  base.py  file.py
llm_learn/: __init__.py  client.py  factory.py
llm_learn/cli/: __main__.py  cli.py
llm_learn/cli/tools/: __init__.py  proxy.py  train.py
llm_learn/collection/: __init__.py  base.py  content.py  directives.py  facts.py  feedback.py  interactions.py  predictions.py  preferences.py
llm_learn/core/: __init__.py  base.py  content.py  database.py  domain.py  embedding.py  exceptions.py  identity.py  models.py  profile.py  schema.py  utils.py  workspace.py
llm_learn/core/export/: __init__.py  jsonl.py
llm_learn/inference/: __init__.py  client.py  context.py  embed_facts.py  embedder.py  query.py
llm_learn/inference/backends/: __init__.py  anthropic.py  base.py  openai_compat.py
llm_learn/memory/: __init__.py  isolation.py
llm_learn/memory/atomic/: __init__.py  embedding.py  models.py  protocol.py
llm_learn/memory/atomic/clients/: assertions.py  base.py  directives.py  feedback.py  interactions.py  predictions.py  preferences.py  solutions.py
llm_learn/memory/v1/: __init__.py  interface.py  models.py
llm_learn/memory/v1/clients/: __init__.py  assertions.py  base.py  directives.py  feedback.py  interactions.py  predictions.py  preferences.py  solutions.py
llm_learn/migrations/: alembic.ini  env.py
llm_learn/migrations/versions/: 001_initial_schema.py  002_training_runs.py
llm_learn/serving/: __init__.py  app.py  routes.py
llm_learn/training/: __init__.py  client.py  config.py  dpo.py  export.py  factory.py  lora.py  model.py  models.py  profiles.py  registry.py  runner.py  runs.py  schema.py  train_client.py
llm_learn/training/dpo/: __init__.py  client.py  export.py  trainer.py
llm_learn/training/lora/: __init__.py  config.py  registry.py  trainer.py
llm_learn/training/manifest/: __init__.py  client.py  loader.py  runner.py  schema.py
llm_learn/training/sft/: __init__.py  client.py  export.py
llm_learn/training/storage/: __init__.py  base.py  file.py
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial_schema.py  002_add_facts_embedding.py  003_memv1_architecture.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_adapter_integration.py  test_facts.py  test_schema.py  test_sql_injection_protection.py  test_training.py
tests/integration/: __init__.py  test_context.py  test_directives.py  test_embed_facts.py  test_ensure_profile.py  test_export.py  test_facts.py  test_feedback.py  test_predictions.py  test_preferences.py  test_rag.py  test_schema.py  test_sft_training_runs.py  test_training_runs.py
tests/unit/: __init__.py  test_client_context.py  test_client_isolation.py  test_context.py  test_directives.py  test_dpo_reference_modes.py  test_embed_facts.py  test_embedder.py  test_embedding_filter.py  test_embedding_validation.py  test_facts.py  test_facts_utils.py  test_feedback.py  test_isolation_context.py  test_learn_client_isolation.py  test_manifest.py  test_predictions.py  test_profiles.py  test_query.py  test_scoped_client.py  test_sft_client.py  test_stability.py  test_storage.py  test_training_config.py  test_training_models.py
